# SignalForge

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  clustering.py  enrichment.py  exports.py  extraction.py  models.py  scoring.py  storage.py
app/static/: app.js  index.html  styles.css
examples/: sample_report.txt
tests/: test_api.py  test_extraction.py  test_scoring_and_exports.py
